# DistributedProcessing

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  client.h  instruction.cpp  instruction.h  peer.cpp  peer.h  processing.cpp  processing.h  server.cpp  server.h  threadPool.cpp  threadPool.h  threadPool.tpp  transmission.cpp  transmission.h
task/UML Diagrams/: imagefilterUML.txt  sequence.txt  serverclientUML.txt  umldiagram.txt
